adição de alguns estilos no texto, como fonte, cor, cor de fundo, alinhamento, utilizando o metodo extreno de css

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UFT 8">
         <title>Receitas</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin receitas</h1>
+        <h1 class="titleone">Odin receitas</h1>
         <ul>
-            <li><a href="receitas/beijinho.html" target="_blank" rel="nooperer noreferrer"> Beijinho</a></li>
-            <li><a href="receitas/bolochoc.html" target="_blank" rel="nooperer noreferrer">Bolo de Chocolate</a></li>
-            <li><a href="receitas/brigadeiro.html" target="_blank" rel="nooperer noreferrer">Brigadeiro</a></li>
+            <li><a class="prim" href="receitas/beijinho.html" target="_blank" rel="nooperer noreferrer"> Beijinho</a></li>
+            <li><a class="prim" href="receitas/bolochoc.html" target="_blank" rel="nooperer noreferrer">Bolo de Chocolate</a></li>
+            <li><a class="prim" href="receitas/brigadeiro.html" target="_blank" rel="nooperer noreferrer">Brigadeiro</a></li>
         </ul>
     </body>
 </html>
