--- a/receitas/bolochoc.html
+++ b/receitas/bolochoc.html
@@ -3,9 +3,10 @@
     <head>
     <meta charset="UTF 8">
     <title>Bolo de chocolate</title>
+    <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Bolo de chocolate</h1>
+        <h1 class="titleone">Bolo de chocolate</h1>
         <img src="https://static.itdg.com.br/images/1200-630/54d82fa5a0d87e91cdd2a5fc189410be/226433-original.jpg" alt="Bolo de chocolate" height="300" width="400">
         <h3>Descrição</h3>
         <p>Bolo de chocolate é um classico para os amantes de doces, esse é um bolo de chocolate caseiro com um gostinho de casa de avó.</p>
