--- a/receitas/beijinho.html
+++ b/receitas/beijinho.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF 8">
         <title>Beijinho</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Beijinho</h1>
-        <img src="https://storage.googleapis.com/imagens_videos_gou_cooking_prod/production/mesas/2021/02/21c4e040-beijinho-_-tm-cristina-martins-_-baixa-8.jpg" alt="beijinhos em uma bandeija" height="300" width="400">
+        <h1 class="titleone">Beijinho</h1>
+        <img src="https://storage.googleapis.com/imagens_videos_gou_cooking_prod/production/mesas/2021/02/21c4e040-beijinho-_-tm-cristina-martins-_-baixa-8.jpg" alt="beijinhos em uma bandeija">
         <h3>Descrição</h3>
         <p>Os beijinhos são doces populares no brasil, normalmente é uma preferência para pessoas que não gostam do famoso brigadeiro. Isso porque o beijinho tem uma base mais natural e pode ser menos adoçado.</p>
         <p>No Brasil, existe a tradicão de colocar um cravo em cima do beijinho. Teoricamente, isso deveria ser apenas para dá-lo um diferencial, no entanto, isso dá um gosto diferencial no doce.</p>
